# cf_ai_SyntheticMarketResearch

./: .env.example  .gitignore  LICENSE  PROMPTS.md  README.md  app.py  package-lock.json  package.json  pyproject.toml  run.sh  test.py  worker.py  wrangler.toml
api/: .gitignore  package-lock.json  package.json  worker.py  wrangler.toml
api/src/: ssr_rater.py  synthetic_consumer.py
backend/: package-lock.json  package.json  tsconfig.json  wrangler.toml
backend/src/: index.ts
backend/src/durable-objects/: SessionObject.ts
backend/src/lib/: llm.ts  python-api.ts
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.d.ts  vite-env.d.ts
frontend/src/lib/api/: client.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/session/[id]/: +page.svelte
shared/: types.ts
src/: anchor_sets.py  demographics.py  main.py  ssr_rater.py  synthetic_consumer.py  synthetic_customer.py
